# easy-whisper

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
easy_whisper/: __init__.py
easy_whisper/templates/: index.html
